CAGRID-711: Removed endorsed jars from Grid Grouper system tests
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/trunk/cagrid/Software/core@18017 dd7b0c16-3c94-4492-92de-414b6a06f0b1